Product Development Project Manager at Columbia Care . Project Manager Media Monitoring (w/m/d). Zeta Global Careers - Technical Project Manager. Dynacare Careers - Program Manager - Customer Relations. Santander Consumer USA Careers - Associate Project Manager. Tyro - Payments Project Manager - Fixed Term 12 mos. Ajna Infotech IT Project Manager (eCommerce) | SmartRecruiters. Sr Project Manager / Associate Director - Oncology Adoptive Cell Therapy Team - PPD Careers. Senior Project Manager / Project Manager - Respiratory Vaccines Team (US Homebased) - PPD Careers. Abrigo Careers - Implementation Project Manager. Job Application for Senior Project Manager at Agilisys. Big Health - Program Manager (Software Development). Job Application for Software Project Manager at DRW . Project Manager - Kiln Equipment Supplies - Compass Business Solutions, Inc. - Career Page. The Zebra - Project Manager. The Zebra - Senior Project Manager. Job Application for Project Manager - Clyde & Co - PERM at Dare.     UX Project Manager at Modus . Shift Digital Careers - Digital Program Manager. Shift Digital Careers - Digital Program Manager. Project Manager - Tetra Tech Careers. Senior Program Manager - Tetra Tech Careers. Multiplica - Jobs: Digital Project Manager (WEB) - Apply online. Skyline Construction - Project Manager - Skyline Capital Builders. Carr Workplaces Senior Project Manager, Construction | SmartRecruiters. Santander Consumer USA Careers - Associate Project Manager. Job Application for Strategic Program Manager, NPI - Global Supply Chain at JUUL Labs. Project Manager (Oncology) - Syneos Health Careers. TrussWorks - Delivery Manager (Project Manager). Best Western Hotels & Resorts Associate Program Manager - Sales | SmartRecruiters. Deloitte Assurance - Audit - FIST - Project Manager - Cape Town | SmartRecruiters. Community Healthcare Network Program Manager (LGBTQ Programs) | SmartRecruiters. Project Manager in Virginia Beach, Virginia | Careers at Capstone .... Project M

--- a/project-manager.html
+++ b/project-manager.html
@@ -40,16 +40,30 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://colcare.recruiterbox.com/jobs/fk031p5'>
+    Product Development Project Manager at Columbia Care
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://unicepta.softgarden.io/job/4505089/Project-Manager-Media-Monitoring-w-m-d-?jobDbPVId=12310449&amp;l=de'>Project Manager Media Monitoring (w/m/d)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/zetaglobal/job/oBCCafwJ'>Zeta Global Careers - Technical Project Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/dynacare/job/oqgEafwe'>Dynacare Careers - Program Manager - Customer Relations</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oC8Eafwi'>Santander Consumer USA Careers - Associate Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oC8Eafwi'>Santander Consumer USA Careers - Associate Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/tyro/b6ccab6e-2735-4cd6-bbef-60e10b14b174'>Tyro - Payments Project Manager - Fixed Term 12 mos</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/AjnaInfotech/743999692393573-it-project-manager-ecommerce-'>Ajna Infotech IT Project Manager (eCommerce) | SmartRecruiters</a></h5> 
@@ -64,7 +78,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/bankerstoolbox/job/oKQDafw7'>Abrigo Careers - Implementation Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/bankerstoolbox/job/oKQDafw7'>Abrigo Careers - Implementation Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -88,11 +102,11 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thezebra/a7daf01a-46cd-4d3e-9bfd-e190a194aeb4'>The Zebra - Senior Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/thezebra/a7daf01a-46cd-4d3e-9bfd-e190a194aeb4'>The Zebra - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dare/jobs/1783401'>Job Application for Project Manager - Clyde & Co - PERM at Dare</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dare/jobs/1783401'>Job Application for Project Manager - Clyde & Co - PERM at Dare</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -158,6 +172,42 @@
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
+<h5><a href='https://jobs-capstone.icims.com/jobs/9666/project-manager/job'>Project Manager in Virginia Beach, Virginia | Careers at Capstone ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... Capstone Corporation is now hiring a Project Manager in Virginia Beach, Virginia
+. Review all of the job details and apply today!</p>
+<hr/>
+<h5><a href='https://jobs-getty.icims.com/jobs/3447/project-manager-sr/job'>Project Manager Sr in Los Angeles, California | Careers at The Getty</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 18, 2019 ... The Getty is now hiring a Project Manager Sr in Los Angeles, California. Review 
+all of the job details and apply today!</p>
+<hr/>
+<h5><a href='https://careers-grubhub.icims.com/jobs/8510/program-manager/job'>Careers at Grubhub - Program Manager in Chicago, Illinois ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 17, 2019 ... 111 W Washington Suite 2100, Chicago, IL 60602 is now hiring a Program 
+Manager in Chicago, Illinois. Review all of the job details and apply today!</p>
+<hr/>
+<h5><a href='https://careers-costain.icims.com/jobs/3246/senior-project-manager/job'>Join Costain | Costain | Senior Project Manager in Solihull | Careers ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 15, 2019 ... Birmingham Business Park is now hiring a Senior Project Manager in Solihull. 
+Review all of the job details and apply today!</p>
+<hr/>
+<h5><a href='https://externaltalent-mskcc.icims.com/jobs/34021/research-project-manager/job'>Research Project Manager in New York, New York | Careers at New ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 15, 2019 ... New York, NY is now hiring a Research Project Manager in New York, New York. 
+Review all of the job details and apply today!</p>
+<hr/>
+<h5><a href='https://careers-e3federalsolutions.icims.com/jobs/5139/program-manager-analysis-of-alternatives-civp7/job'>Career Opportunities | E3 Federal Solutions | Program Manager ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 18, 2019 ... McLean is now hiring a Program Manager Analysis of Alternatives CIVP7 in 
+McLean, Virginia. Review all of the job details and apply today!</p>
+<hr/>
+<h5><a href='https://careers-peelregion.icims.com/jobs/9366/project-manager%2C-corporate-project-management-office/job'>Project Manager, Corporate Project ... - Region of Peel - Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... CA-ON-Brampton is now hiring a Project Manager, Corporate Project 
+Management Office in Brampton, Ontario. Review all of the job details and apply 
+today!</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4364624002'>Job Application for Language Specialist / Project Manager- Spanish at SoundHound Inc.</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
@@ -183,7 +233,7 @@ Media Partners, LLC.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Project Manager at MIMS.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/limebike/0322ff3d-2232-4292-9887-e80955ab2868'>Lime - Program Manager- HR</a></h5> 
+<h5><a href='https://jobs.lever.co/limebike/0322ff3d-2232-4292-9887-e80955ab2868'>Lime - Program Manager- HR</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -199,7 +249,7 @@ Media Partners, LLC.</p>
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/automationanywhere/job/o8CAafwe'>Automation Anywhere Careers - Sr. Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/o8CAafwe'>Automation Anywhere Careers - Sr. Program Manager</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -222,7 +272,7 @@ Tennessee. Review all of the job details and apply today!</p>
 tracking and reporting - Ensures effective and efficient meetings such as stand-
 ups,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/softcat/job/o7aBafwM'>Softcat Careers - Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/softcat/job/o7aBafwM'>Softcat Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light">Manchester London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -308,7 +358,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://mainebhr.recruiterbox.com/jobs/fk031x4'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mainebhr.recruiterbox.com/jobs/fk031x4'>
     Inspection Program Manager - 0748-2 at State of Maine
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -364,7 +414,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Astreya/743999692408884-demand-gen-marketing-program-manager'>Astreya Demand Gen Marketing Program Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Astreya/743999692408884-demand-gen-marketing-program-manager'>Astreya Demand Gen Marketing Program Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -384,7 +434,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/akqa/jobs/1778248'>Job Application for Senior Project Manager (Melbourne) at AKQA</a></h5> 
+<h5><a href='https://boards.greenhouse.io/akqa/jobs/1778248'>Job Application for Senior Project Manager (Melbourne) at AKQA</a></h5> 
 <p><span class="badge badge-light">Melbourne Melbourne Melbourne</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -400,7 +450,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://condenastuk.avature.net/careers/JobDetail/Acting-Senior-Project-Manager-GQ-WIRED/1974'>Acting Senior Project Manager, GQ & WIRED - Careers</a></h5> 
+<h5><a href='https://condenastuk.avature.net/careers/JobDetail/Acting-Senior-Project-Manager-GQ-WIRED/1974'>Acting Senior Project Manager, GQ & WIRED - Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -412,50 +462,8 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/Ou3a9lmbjk/Program-Manager-I'>Program Manager I - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/Ou3a9lmbjk/Program-Manager-I'>Program Manager I - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/B0R8UQlcl7/Project-Manager-III'>Project Manager III - PRO Unlimited @ Facebook - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/jxpY5wI4Ga/Project-Manager-9276707'>Project Manager (9276707) - PRO Unlimited @ Facebook - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/yRP57Lmwm3/Project-Manager-Product-Operations'>Project Manager, Product Operations - PRO Unlimited @ Facebook - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/lqIxe3ubUr/Enterprise-Sales-Channel-Development-Administrative-Project-Manager'>Enterprise Sales & Channel Development Administrative Project Manager - PRO Unlimited @ Facebook - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://thalle.recruiterbox.com/jobs/fk031qj'>
-    Project Manager -Heavy Civil Construction  at Thalle Construction  Company
-</a></h5> 
-<p><span class="badge badge-light">North Carolina</span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/ringcentral/job/oMpDafwI'>RingCentral Careers - Customer Communications Project Manager</a></h5> 
-<p><span class="badge badge-light">Denver Denver</span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Version1/743999692174805-jde-project-manager'>Version 1 JDE Project Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Version1/743999692175201-jde-project-manager'>Version 1 JDE Project Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ProgressiveTechnologySolutions1/743999692305161-program-manager-licensing-operations'>Progressive technology solutions Program Manager, Licensing Operations | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">California North America</span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1780971'>Job Application for Technical Program Manager at Fitbit</a></h5> 
-<p><span class="badge badge-light">Minsk</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 
